src/app/index.scss
$red: #ac5e9f;
$green: #5E7535;
$blue: #61abbb;

$icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/";

$link-color: #76891a;
$hr-border: #76891a;
$navbar-default-bg: rgba(#fff, 0);

$well-bg: transparent;

.blue + .tooltip > .tooltip-inner {
  background-color: $blue;
}
.blue + .tooltip.top > .tooltip-arrow {
  border-top-color: $blue;
}

.green + .tooltip > .tooltip-inner {
  background-color: $green;
}
.green + .tooltip.top > .tooltip-arrow {
  border-top-color: $green;
}

.red + .tooltip > .tooltip-inner {
  background-color: $red;
}
.red + .tooltip.top > .tooltip-arrow {
  border-top-color: $red;
}

$navbar-default-link-color: #76891a;
$navbar-default-link-hover-color: #515e12;

$list-group-bg: rgba(#fff, 0.5);
$list-group-border: #76891a;

$panel-bg: rgba(#fff, 0.5);
$panel-body-padding: 20px;
$panel-default-border: #76891a;
$panel-default-text: #515e12;
$panel-default-heading-bg: rgba(#fff, 0.5);
$panel-inner-border: #76891a;
$panel-footer-bg: rgba(#fff, 0.5);

$modal-body-bg: #f7f8f3;

$btn-success-color: #ffffff;
$btn-success-bg: #ac5e9f;
$btn-success-border: #ac5e9f;

$btn-info-color: #ffffff;
$btn-info-bg: #5E7535;
$btn-info-boder: #6f9b1d;

$table-border-color: #bac48c;
//$table-bg: rgba(#fff, 0.7);

$state-danger-text: #ac5e9f;
$state-danger-bg: rgba(#eedeef, 0.7);
$state-danger-border: #d5aecf;
$state-success-test: #76891a;
$state-success-bg: rgba(#bac48c, 0.7);
$close-color: #67385f;

$nav-tabs-border-color: #76891a;
$nav-tabs-link-hover-border-color: #76891a;
$nav-tabs-active-link-hover-bg: rgba(#fff, 0.5);
$nav-tabs-active-link-hover-border-color: #76891a;
$nav-tabs-active-link-hover-color: #76891a;

$nav-pills-active-link-hover-bg: rgba(#fff, 0.5);
$nav-pills-active-link-hover-color: #76891a;

$blockquote-border-color: #76891a;
$blockquote-small-color: #76891a;

$pagination-border: #c8cfa3;
$pagination-hover-bg: #e3e7d1;
$pagination-hover-border: #c8cfa3;
$pagination-active-bg: #acb875;
$pagination-active-border: #acb875;

$breadcrumb-bg: rgba(#fff, 0.5);
$breadcrumb-separator: '|';

$dropdown-link-color: $link-color;

$label-info-bg: #61abbb;
$label-danger-bg: lighten(#ac5e9f, 10%);
$label-success-bg: lighten(#5E7535, 10%);

body {
  h1 {
    font-size: 14px;
    display: inline;
  }
  span {
    outline: none;
  }
  label.control-label {
    outline: none;
  }
  button.btn.btn-info.btn-sm {
    outline: none;
  }
  .nav > li > a:hover, .nav > li > a:focus {
    outline: none;
  }
  table tr.mouseover {
    border-left: medium solid $red;
  }
  .inline-block {
    display: inline-block;
  }
  .form-horizontal .modal-label {
    text-align: left;
    margin-bottom: 0;
    padding-top: 7px;
  }

  .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
    color: $link-color;
  }
  background-image: url('../assets/images/wood.png');
  // スマホ用画面のメニュー
  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
    background-color: rgba($link-color, 0.2);
  }
  .navbar-default .navbar-toggle {
    border-color: $green;
  }
  .navbar-default .navbar-toggle .icon-bar {
    background-color: $green;
  }

  .well {
    box-shadow: none;
  }

  label {
    font-family: 'Lucida Grande', Meiryo, sans-serif;
    font-size: 12px;
    color: #515e12;
    font-weight: normal;
  }
  .panel-body {
    font-size: 12px;
    #category {
      min-height: 100px;
    }
  }
  .panel-body#with-background {
    background-image: url('../assets/images/filter_pig.gif');
    background-size: 120% auto;
    background-repeat: no-repeat;
  }
  .list-group-item {
    cursor: pointer;
    a { 
      color: #ac5e9f;
      font-size: 12px;
    }
    span {
      font-size: 12px;
      padding-right: 7px;
      color: #AC5E9F;
    }
    img {
      width: 24px;
      text-align: right;
    }
  }
  .sns-buttons {
    text-align: right;
  }
  .fb_iframe_widget > span {
    vertical-align: baseline !important;
  }
  span.red {
    color: $red;
  }
  span.green {
    color: $green;
  }
  span.blue {
    color: $blue;
  }
  span.dotted {
    border-bottom: dotted 2px #ac5e9f;
  }
  span.green_dotted {
    border-bottom: dotted 2px $green;
  }
  a.label-list {
    margin-right: 30px;
  }
  span.errors {
    font-family: 'Lucida Grande', Meiryo, sans-serif;
    color: #ac5e9f;
    div {
      margin-left: 10px;
    }
  }
  span.error {
    font-family: 'Lucida Grande', Meiryo, sans-serif;
    font-weight: bold;
    color: rgba($link-color, 0.5);
    margin-left: 20px;
    #status_code {
      font-size: 150px;
    }
    #str {
      font-size: 50px;
    }
  }
  .close {
    line-height: 0.8;
  }
  .footer {
    color: #9fac5e;
    text-align: center;
    margin-top: 80px;
    margin-bottom: 15px;
  }

  .category-name {
    font-weight: bold;
    color: #2f360a;
  }
  .category-plus {
    color: rgba($link-color, 0.4);
    font-size: 18px;
    background-color: rgba($link-color, 0.1);
    height: 150px;
  }
  span#category-list {
    span {
      padding-bottom: 10px;
    }
    margin-right: 10px;
  }

  .category-form {
    display: block;
    width: 100%;
    height: 34px;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857;
    color: #555555;
    background-color: rgba(#fff, 0.1);
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.075);
    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  }

  .panel-background {
    background-color: rgba($link-color, 0.2);
  }

  .panel.category-card {
    height: 150px;
  }

  .panel.place-card {
    padding: 15px;
    margin-bottom: 5px;
  }
  .place-plus {
    color: rgba($link-color, 0.4);
    font-size: 18px;
    background-color: rgba($link-color, 0.1);
  }

  ul.list {
    list-style: none;
    li {
      margin-top: 5px;
      span#post_at {
        margin-right: 10px;
        margin-left: -30px;
      }
    }
    li:first-child {
      margin-top: 0px;
    }
  }
}

.toast-success {
  background-color: rgba(118,137,26, 0.6);
}
.toast-top-center {
  top: 60px;
}

// bower:scss
// endbower

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

.thumbnail {
  height: 200px;

  img.pull-right {
    width: 50px;
  }
}

#right-icon {
  padding-left: 5px;
}

#left-icon {
  padding-right: 5px;
}

// injector
// endinjector

.flex-direction-nav a {
  height: 50px;
}

#loader {
  position: absolute;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  border: 4px solid $red;
  border-right-color: transparent;
  animation: spin 0.5s linear infinite;
  margin-top: 5px;
  margin-left: 10px;
}

@keyframes spin {
  0% { transform: rotate(0deg);   opacity: 0.2; }
  50%  { transform: rotate(180deg); opacity: 1.0; }
  100%   { transform: rotate(360deg); opacity: 0.2; }
}

@font-face {
  font-family: 'flexslider-icon';
  src: url('../assets/images/fonts/flexslider-icon.eot');
  src: url('../assets/images/fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'), url('../assets/images/fonts/flexslider-icon.woff') format('woff'), url('../assets/images/fonts/flexslider-icon.ttf') format('truetype'), url('../assets/images/fonts/flexslider-icon.svg#flexslider-icon') format('svg');
  font-weight: normal;
  font-style: normal;
}

.color-picker-wrapper .input-group { 
  width: 40%;
}

